EXTRA_DIST = \
  bugFix.txt \
  endings.txt \
  featInfo.h \
  featInfo.l \
  featInfo.lm \
  featInfo.m \
  featInfo.r \
  featInfo.rm \
  featInfo.ru \
  featInfo.s \
  featInfo.t \
  featInfo.tt \
  featInfo.u \
  headInfo.txt \
  h.g \
  h.lambdas \
  l.g \
  l.lambdas \
  lm.g \
  lm.lambdas \
  m.g \
  m.lambdas \
  nttCounts.txt \
  pSgT.txt \
  pUgT.txt \
  r.g \
  r.lambdas \
  rm.g \
  rm.lambdas \
  ru.g \
  ru.lambdas \
  sometxt \
  terms.txt \
  tt.g \
  tt.lambdas \
  u.g \
  u.lambdas \
  unitRules.txt
