EXTRA_DIST = \
  args.counts \
  B-A0.model.ab \
  B-A1.model.ab \
  B-A2.model.ab \
  B-A3.model.ab \
  B-A4.model.ab \
  B-A5.model.ab \
  B-AA.model.ab \
  B-AM-ADV.model.ab \
  B-AM-CAU.model.ab \
  B-AM-DIR.model.ab \
  B-AM-DIS.model.ab \
  B-AM-EXT.model.ab \
  B-AM-LOC.model.ab \
  B-AM-MNR.model.ab \
  B-AM-MOD.model.ab \
  B-AM-NEG.model.ab \
  B-AM-PNC.model.ab \
  B-AM-PRD.model.ab \
  B-AM-REC.model.ab \
  B-AM-TMP.model.ab \
  B-C-A0.model.ab \
  B-C-A1.model.ab \
  B-C-A2.model.ab \
  B-C-A3.model.ab \
  B-C-AM-MNR.model.ab \
  B-O.model.ab \
  B-R-A0.model.ab \
  B-R-A1.model.ab \
  B-R-A2.model.ab \
  B-R-A3.model.ab \
  B-R-AM-CAU.model.ab \
  B-R-AM-LOC.model.ab \
  B-R-AM-MNR.model.ab \
  B-R-AM-PNC.model.ab \
  B-R-AM-TMP.model.ab \
  feature.lexicon \
  label.counts \
  lemma.counts \
  valid.labels \
  verb.particles \
  verbs.args \
  word.counts \
  words.temporal

