
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# pkginclude_HEADERS = hello.h

INCLUDES = -I. 

lib_LIBRARIES = libswirlab.a

libswirlab_a_SOURCES = \
  AdaBoostMH.cc \
  AdaBoostMH.h \
  bABTree.cc \
  bABTree.h \
  bAdaBoost.cc \
  bAdaBoost.h \
  classifier.h \
  dataset.cc \
  dataset.h \
  example.cc \
  example.h \
  fvinput.cc \
  fvinput.h 





